2012-02-17  Adam Fedor <fedor@gnu.org>

	* gnustep-core-0.29.1
	  New stable releases

2011-11-22  Adam Fedor <fedor@gnu.org>

	* gnustep-msys-system-0.29.0
	  Updated tool chain to Nov 2011

	* gnustep-core-0.29.0
	  Use libobjc2 1.5.1, SVN core libraries (Nov 2011)

	* gnustep-devel-1.4.0
	  GCC 4.6 and updated tools

2011-04-20  Adam Fedor <fedor@gnu.org>

	* gnustep-msys-system-0.27.1
	  Updated openssl library to version 1.0.0 to fix incompatibility
	  with SSH.

	* gnustep-core-0.28.0
	  Updated to include latest core release (Make 2.6.0, Base 1.22.0
	  Gui 0.20.0)

2011-02-16  Adam Fedor <fedor@gnu.org>

	* gnustep-msys-system-0.27.0
	  Completely new mingw installation based on the mingw-get package 
	manager. Files are now installed in different locations to better 
	match the MinGW default layout. Although as a practical matter this 
	doesn't change much, as the files can still be accessed the same way 
	inside the msys shell, due to mount points. And files locations don't 
	matter much anyway when used with GNUstep apps. Also added libao, 
	libsndfile and icu libraries.
	* gnustep-core-0.27.0
	  Updated snapshots of the core libraries
	* gnustep-devel-1.3.0
	  Updated to match msys-system package

2010-07-14  Adam Fedor <fedor@gnu.org>

	* gnustep-system-0.25.1
	   Rebased msys-1.0.dll. Added rebase.exe to gnustep-msys-system
	   Replace m4.exe with m4 1.4.14 version
	* gnustep-devel-1.1.1
	   Replace mingw autoconf-2.64 with msys autoconf-2.65
	   (Fixes #30317)

2010-05-14  Adam Fedor <fedor@gnu.org>

	* gnustep-msys-system-0.25.0
	Change version to match core release

	* gnustep-core-0.25.0
	New core packages (make 2.4.0, base 1.21.0, gui/back 0.19.0)

2010-04-29  Adam Fedor <fedor@gnu.org>

	* gnustep-msys-system-0.24.3
	Renamed from gnustep-system.
	Moved GCC compiler to the gnustep-devel installer

	* gnustep-core-0.24.3
	Added some missing files.

	* gnustep-devel-1.1.0
	Add GCC compiler
	Added missing glib package